<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DB</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="student_psw">密碼</string>
    <string name="in_item">新增</string>
    <string name="de_item">刪除</string>
    <string name="up_item">修改</string>
    <string name="sea_item">查詢</string>
    <string name="student_sno">學生帳號</string>
    <string name="student_in_time">進入時間</string>

</resources>
